--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -20,6 +20,9 @@
         %p
           %a.icon-pinterest{ href: "http://pinterest.com/chefsteps/" }
             Pinterest
+        %p
+          %a.icon-legal{ href: legal_url }
+            Legal
 
 - unless user_signed_in?
   #auth-modal.modal.hide
