update licensing copy and add link

--- a/app/assets/stylesheets/forum_nav.css.sass
+++ b/app/assets/stylesheets/forum_nav.css.sass
@@ -72,6 +72,8 @@
     color: inherit
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif
     text-align: left
+    &.creative-commons
+      margin-top: 2.4em
 
   a
     color: #D85516
