--- a/app/views/layouts/_authentication.html.haml
+++ b/app/views/layouts/_authentication.html.haml
@@ -2,7 +2,7 @@
   .profile-info{ data: {'click-toggle' => 'active'} }
     .text
       = current_user.name
-      %span San Francisco
+      %span= current_user.location
     = image_tag current_user.profile_image_url(default_profile_photo_url)
   %li.authentication.authorized.first
     = link_to destroy_user_session_path, method: :delete do
