--- a/app/views/layouts/_app_init.html.haml
+++ b/app/views/layouts/_app_init.html.haml
@@ -1,8 +1,7 @@
 :javascript
   $(function() {
     new ChefSteps.init({
-      profile: JSON.parse('#{user_signed_in? ? j(current_user.to_json) : false}'),
-      currentUserId: "#{user_signed_in? ? current_user.id : false}"
+      profile: JSON.parse('#{user_signed_in? ? j(current_user.to_json) : false}')
     })
   });
 
