--- a/app/views/styleguide/index.html.haml
+++ b/app/views/styleguide/index.html.haml
@@ -2,53 +2,9 @@
 
 .container
   %h3 Delve Styleguide
-  %h5
-    This is where our basic styles are shown.
-    You can use either
-    %a{ href: 'http://daringfireball.net/projects/markdown/syntax', target: '_blank' } markdown
-    or straight HTML for all fields labeled with "(Markdown or HTML)."
-  .row
-    .span12
-      %h2 Headers
-      .well
-        %h1 Heading 1
-        %p Use for the main heading of the page
-        %p Ideally there's only one of these per page.
-        %hr
 
-        %h2 Heading 2
-        %p Use for subsection titles of the main content
-        %hr
-
-        %h3 Heading 3
-        %p Use for titles of secondary content sections or sub-subsection titles
-        %hr
-
-        %h4 Heading 4
-        %p Use for titles of non-content blocks
-        %hr
-
-        %h5 Heading 5
-        %p Use for titles of captions
-        %hr
-
-        %h6 Heading 6
-        %p Use for titles of small text blocks (footnotes, small asides, etc...)
-
-  .row.show-grid
-    .span2.styleguide-georgia-regular
-      Font Size: Default (12px)
-    .span2.styleguide-georgia-regular
-      Georgia-Regular
-    .span2.styleguide-georgia-bold
-      Georgia-Bold
-  .row.show-grid.styleguide-font-18
-    .span2.styleguide-georgia-regular
-      Font Size: 18px
-    .span2.styleguide-georgia-regular
-      Georgia-Regular
-    .span2.styleguide-georgia-bold
-      Georgia-Bold
+  = render 'headers'
+  = render 'fonts'
 
   .row
     %h2 Body Text
