--- a/app/assets/stylesheets/styleguide.css.sass
+++ b/app/assets/stylesheets/styleguide.css.sass
@@ -30,21 +30,39 @@
 .styleguide-serif-large
   +font-serif-large
 
-// .show-grid
-//   font-size: 14px
-//   .styleguide-brick
-//     +styleguide-swatch($brick)
-//     color: $white
-//   .styleguide-brickLight
-//     +styleguide-swatch($brickLight)
-//     color: $white
-//   .styleguide-white
-//     +styleguide-swatch($white)
-//   .styleguide-black
-//     +styleguide-swatch($black)
-//     color: $white
-//   .styleguide-brickDark
-//     +styleguide-swatch($brickDark)
-//     color: $white
-
+.styleguide-color
+  &.brick
+    +styleguide-swatch($brick)
+    color: $white
+  &.brickLight
+    +styleguide-swatch($brickLight)
+    color: $white
+  &.white
+    +styleguide-swatch($white)
+  &.black
+    +styleguide-swatch($black)
+    color: $white
+  &.brickDark
+    +styleguide-swatch($brickDark)
+    color: $white
+  &.gray
+    +styleguide-swatch($gray)
+    color: $white
+  &.grayMedium
+    +styleguide-swatch($grayMedium)
+    color: $white
+  &.grayDark
+    +styleguide-swatch($grayDark)
+    color: $white
+  &.grayDarker
+    +styleguide-swatch($grayDarker)
+    color: $white
+  &.grayLight
+    +styleguide-swatch($grayLight)
+  &.grayLighter
+    +styleguide-swatch($grayLighter)
+  &.blue
+    +styleguide-swatch($blue)
+  &.blueDark
+    +styleguide-swatch($blueDark)
 
