--- a/app/views/styleguide/index.html.haml
+++ b/app/views/styleguide/index.html.haml
@@ -5,25 +5,8 @@
 
   = render 'headers'
   = render 'fonts'
+  = render 'colors'
 
-  .row
-    %h2 Body Text
-    .well.span12
-      %p Authentic jean shorts DIY, twee sriracha wayfarers semiotics 3 wolf moon viral post-ironic. Cardigan leggings cliche, single-origin coffee portland high life farm-to-table small batch. Single-origin coffee farm-to-table 8-bit tattooed mustache, butcher vinyl +1 mcsweeney's bicycle rights gentrify. Kogi farm-to-table 8-bit, vice carles street art banksy leggings synth aesthetic cray. Sriracha vice tumblr, forage quinoa ethical cardigan small batch iphone pickled. Hella fingerstache dreamcatcher carles tofu, skateboard biodiesel farm-to-table blog readymade typewriter narwhal cray. DIY photo booth tumblr typewriter, squid echo park marfa pork belly pickled master cleanse terry richardson narwhal.
-      %p High life hella viral truffaut jean shorts pinterest. Gluten-free blog squid chillwave, swag viral banh mi pitchfork dreamcatcher synth american apparel. 8-bit chillwave fap, thundercats forage vice wolf organic brunch. Pork belly selvage mustache, tattooed fanny pack farm-to-table put a bird on it yr hoodie pinterest. Brunch flexitarian retro, fap bicycle rights craft beer cliche sriracha selvage banh mi. Portland cardigan +1 vinyl, pour-over vice VHS pinterest organic umami stumptown. Twee gastropub hella ennui vinyl, gluten-free iphone organic lo-fi odd future.
-      %p Godard mumblecore single-origin coffee farm-to-table food truck. Umami locavore echo park mcsweeney's. Cardigan narwhal beard, viral shoreditch marfa PBR polaroid raw denim etsy four loko pitchfork whatever portland authentic. Tofu polaroid ennui, irony lo-fi 3 wolf moon kogi jean shorts marfa retro DIY craft beer. Bespoke cardigan VHS, banksy semiotics helvetica wolf artisan leggings mustache cred trust fund tumblr american apparel aesthetic. Mumblecore kale chips messenger bag keytar sriracha quinoa, pitchfork you probably haven't heard of them squid gastropub occupy fanny pack raw denim. Artisan freegan ennui pop-up, williamsburg high life street art before they sold out cred DIY put a bird on it.
-
-  .row.show-grid
-    .span1.styleguide-black
-      $black
-    .span1.styleguide-white
-      $white
-    .span1.styleguide-brick
-      $brick
-    .span1.styleguide-brickLight
-      $brickLight
-    .span1.styleguide-brickDark
-      $brickDark
   .row
     .span12
       %h3 Bullet Lists
