--- a/app/assets/stylesheets/styleguide.css.sass
+++ b/app/assets/stylesheets/styleguide.css.sass
@@ -4,6 +4,9 @@
   border: 1px solid darken($color, 20%)
   background: $color
 
+.show-grid
+  margin-top: 10px
+
 .show-grid [class*="span"]
   border-radius: 3px
   background-color: #eee
@@ -31,6 +34,7 @@
   +font-serif-large
 
 .styleguide-color
+  +font-serif-tiny
   &.brick
     +styleguide-swatch($brick)
     color: $white
