--- a/app/views/styleguide/_fonts.html.haml
+++ b/app/views/styleguide/_fonts.html.haml
@@ -9,11 +9,11 @@
     Sans Large (20px)
 .row.show-grid
   .span2.styleguide-serif-tiny
-    Sans Serif Tiny (12px)
+    Serif Tiny (12px)
   .span2.styleguide-serif-small
-    Sans Serif Small (14px)
+    Serif Small (14px)
   .span2.styleguide-serif-medium
-    Sans Serif Medium (16px)
+    Serif Medium (16px)
   .span2.styleguide-serif-large
-    Sans Serif Large (20px)
+    Serif Large (20px)
 
