--- a/app/views/styleguide/_colors.html.haml
+++ b/app/views/styleguide/_colors.html.haml
@@ -21,6 +21,7 @@
     brickLight
   .span1.styleguide-color.brickDark
     brickDark
+.row.show-grid
   .span1.styleguide-color.blue
     brickDark
   .span1.styleguide-color.blueDark
