add buttons page

--- a/app/views/styleguide/index.html.haml
+++ b/app/views/styleguide/index.html.haml
@@ -8,27 +8,5 @@
   = render 'headers'
   = render 'fonts'
   = render 'colors'
-
-  .row
-    .span12
-      %h3 Bullet Lists
-      .well
-        %ul
-          %li Austin flexitarian PBR typewriter, vice leggings mumblecore shoreditch
-          %li culpa, squid godard whatever tattooed vegan mixtape gentrify. Carles aute
-          %li Austin flexitarian PBR typewriter, vice leggings mumblecore shoreditch
-      %h3 Numbered Lists
-      .well
-        %ol
-          %li culpa, squid godard whatever tattooed vegan mixtape gentrify. Carles aute
-          %li Austin flexitarian PBR typewriter, vice leggings mumblecore shoreditch
-          %li culpa, squid godard whatever tattooed vegan mixtape gentrify. Carles aute
-
-  .row
-    .span12.styleguide-social-icons
-      %h3 Social Icons
-      %i.ss-icons.ss-facebook.icon-circle-brick
-      %i.ss-twitter.icon-circle-brick
-      %i.ss-pinterest.icon-circle-brick
-      %i.ss-google.icon-circle-brick
+  = render 'buttons'
 
