--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -106,6 +106,7 @@ li.bullet-for-sale
   background: $brick
   color: $white
   text-transform: uppercase
+  text-align: center
   border: none
   +border-radius(5px)
   padding: 3px
@@ -119,6 +120,7 @@ li.bullet-for-sale
     text-decoration: none
     color: $white
     background: $brickDark
+    cursor: pointer
   .inner
     border: 1px dashed $white
     +border-radius(5px)
@@ -210,6 +212,7 @@ iframe
   +border-radius(3px)
 
 .btn-facebook
+  &.btn-large
   +buttonBackground($btnFacebookBackground, $btnFacebookBackgroundHighlight)
   position: relative
   padding-left: 47px
