--- a/app/views/copy/legal.html.haml
+++ b/app/views/copy/legal.html.haml
@@ -1,13 +1,14 @@
-#legal
-  %ul.nav.nav-tabs
-    = tab 'Terms of Service', 'terms'
-    = tab 'Privacy Policy', 'privacy'
-    = tab 'Licensing', 'licensing'
+- cache version do
+  #legal
+    %ul.nav.nav-tabs
+      = tab 'Terms of Service', 'terms'
+      = tab 'Privacy Policy', 'privacy'
+      = tab 'Licensing', 'licensing'
 
-  .tab-content
-    = tab_pane 'terms' do
-      = render 'legal_layout', title: 'Terms of Service', copy: terms_of_service
-    = tab_pane 'privacy' do
-      = render 'legal_layout', title: 'Privacy Policy', copy: privacy_policy
-    = tab_pane 'licensing' do
-      = render 'legal_layout', title: 'Licensing', copy: licensing
+    .tab-content
+      = tab_pane 'terms' do
+        = render 'legal_layout', title: 'Terms of Service', copy: terms_of_service
+      = tab_pane 'privacy' do
+        = render 'legal_layout', title: 'Privacy Policy', copy: privacy_policy
+      = tab_pane 'licensing' do
+        = render 'legal_layout', title: 'Licensing', copy: licensing
