update style and layout

--- a/app/assets/stylesheets/styleguide.css.sass
+++ b/app/assets/stylesheets/styleguide.css.sass
@@ -70,3 +70,14 @@
   &.blueDark
     +styleguide-swatch($blueDark)
 
+.styleguide-row-layout
+  margin-bottom: 10px
+
+.styleguide-row-layout [class*="span"]
+  background-color: #eee
+  text-align: center
+  padding: 10px 0
+
+.styleguide-dark-background
+  background: $black !important
+
