--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -1,47 +1,48 @@
 - content_for :title, 'Accelerated Sous Vide Cooking'
 
-.hero-unit.course-title
+- cache ['course', version] do
+  .hero-unit.course-title
+    .container
+      .row
+        .span8
+          %h3 Accelerated Sous Vide Cooking Course
+        .span4
+          %a.button.pull-right{ href: activity_path(activities.first) }
+            .inner
+              Preview More
+              %i.icon-double-chevron-right
+
   .container
-    .row
+    .row.top-video
+      .span12
+
+    .row.course-info
       .span8
-        %h3 Accelerated Sous Vide Cooking Course
-      .span4
-        %a.button.pull-right{ href: activity_path(activities.first) }
-          .inner
-            Preview More
-            %i.icon-double-chevron-right
+        :markdown
+          #{course_description.copy.to_s}
+      .span4.pull-right
+        = render 'course_breakdown', copy: syllabus_copy
+      .span8.pull-left
+        %h3 Instructors
+        %ul.unstyled
+          %li.instructor
+            .row
+              .span2
+                = image_tag('chris-large.jpg', title: 'Chris Young', class: 'img-profile')
+              .span6
+                :markdown
+                  #{bio_chris.copy.to_s}
+            .row
+              .span8.horizontal-divider
+          %li.instructor
+            .row
+              .span2
+                = image_tag('grant-large.jpg', title: 'Chris Young', class: 'img-profile')
+              .span6
+                :markdown
+                  #{bio_grant.copy.to_s}
+            .row
+              .span8.horizontal-divider
 
-.container
-  .row.top-video
-    .span12
-
-  .row.course-info
-    .span8
-      :markdown
-        #{course_description.copy.to_s}
-    .span4.pull-right
-      = render 'course_breakdown', copy: syllabus_copy
-    .span8.pull-left
-      %h3 Instructors
-      %ul.unstyled
-        %li.instructor
-          .row
-            .span2
-              = image_tag('chris-large.jpg', title: 'Chris Young', class: 'img-profile')
-            .span6
-              :markdown
-                #{bio_chris.copy.to_s}
-          .row
-            .span8.horizontal-divider
-        %li.instructor
-          .row
-            .span2
-              = image_tag('grant-large.jpg', title: 'Chris Young', class: 'img-profile')
-            .span6
-              :markdown
-                #{bio_grant.copy.to_s}
-          .row
-            .span8.horizontal-divider
-
-= render 'layouts/disqus_comments', disqus_id: 'course-1'
+  = render 'layouts/disqus_comments', disqus_id: 'course-1'
 
