--- a/app/views/styleguide/_colors.html.haml
+++ b/app/views/styleguide/_colors.html.haml
@@ -3,8 +3,8 @@
     %h3 Colors
 
 :ruby
-  color_names = %w[black white gray grayMedium grayDark grayDarker grayLight grayLighter white brick
-    brickLight brickDark blue blueDark]
+  color_names = %w[black white gray grayDarker grayDark grayMedium  grayLight grayLighter brickDark
+    brick brickLight blue blueDark]
 
 - color_names.in_groups_of(11, false).each do |colors|
   .row.show-grid
