use smaller font for tabs on mobile

--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -178,6 +178,9 @@
     input[type=submit]
       margin-left: 40px
 
+  .nav-tabs > li > a
+    font-size: 13px
+
 /* Everything but portrait iphone*/
 @media (min-width: 480px)
   +authentication-nav
