--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -27,9 +27,11 @@
 
 - unless user_signed_in?
   #auth-modal.modal.hide
-    %button.close{ data: { dismiss: 'modal' } }
-      %i.icon-remove
-    = render template: 'devise/sessions/new'
-    = render template: 'devise/registrations/new'
-    = render template: 'devise/registrations/complete_registration'
-    = render template: 'devise/passwords/new'
+    .modal-body
+      %button.close{ data: { dismiss: 'modal' } }
+        %i.icon-remove
+      = render template: 'devise/sessions/new'
+      = render template: 'devise/registrations/new'
+      = render template: 'devise/registrations/complete_registration'
+      = render template: 'devise/passwords/new'
+
