update signup form layout for mobile

--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -92,6 +92,15 @@
     h1
       font-size: 26px
 
+/* Android phone. Weird inbetween*/
+@media (max-width: 520px)
+  .user-form
+    label
+      margin-left: 10px
+    input
+      width: 240px
+    input[type='submit']
+      margin-left: 65px
 
 @media (max-width: 480px)
   /* ##################### */
@@ -162,7 +171,7 @@
       width: 157px
 
     .terms-of-service
-      padding-left: 85px
+      padding-left: 45px
 
     .forgot-password
       margin-right: 53px
@@ -180,6 +189,7 @@
 
   .nav-tabs > li > a
     font-size: 13px
+
 
 /* Everything but portrait iphone*/
 @media (min-width: 480px)
