modal style tweaks

--- a/app/assets/stylesheets/application/users/_forms.css.sass
+++ b/app/assets/stylesheets/application/users/_forms.css.sass
@@ -129,10 +129,15 @@
 #auth-modal
   +border-radius(16px)
   border: 10px solid $grayDarker
+
   .close
     position: relative
     top: 10px
     right: 10px
+
+  .modal-body
+    padding: 0
+    max-height: inherit
 
 .user-edit-form
   +font-sans-medium
