--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,10 +1,11 @@
 #password-reset.user-form
   %h1 Forgot your password?
-  = semantic_form_for(@user,
-                      as: :user,
-                      url: password_path('user'),
-                      remote: true) do |f|
-    = f.inputs 'Enter email for password reset instructions' do
-      = f.input :email, label: 'Email:', input_html: { type: 'email', required: true}
-    = f.submit "Send Instructions"
+  .modal-body
+    = semantic_form_for(@user,
+                        as: :user,
+                        url: password_path('user'),
+                        remote: true) do |f|
+      = f.inputs 'Enter email for password reset instructions' do
+        = f.input :email, label: 'Email:', input_html: { type: 'email', required: true}
+      = f.submit "Send Instructions"
 
