--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -167,21 +167,38 @@
     margin-bottom: 20px !important
 
   #auth-modal
+    h1
+      font-size: 20px
+      padding-bottom: 0
+
     input:not([type="checkbox"])
-      width: 157px
+      width: 130px
+
+    .modal-body
+      max-height: 260px
 
     .terms-of-service
-      padding-left: 45px
+      padding-left: 10px
 
     .forgot-password
-      margin-right: 53px
+      margin-right: 63px
 
-    .welcome p
-      font-size: 16px
-      margin-right: 25px
+    .welcome
+      img
+        margin-left: 20px
+      p
+        font-size: 16px
+        margin-right: 25px
+        margin-left: 120px
 
     .facebook-login a
       margin-left: 0
+      width: 190px
+      font-size: 17px
+
+    #password-reset
+      input[type=submit]
+        width: 180px
 
   #password-edit
     input[type=submit]
