add layout setup for mira to look at

--- a/app/views/styleguide/_row-spans.html.haml
+++ b/app/views/styleguide/_row-spans.html.haml
@@ -33,3 +33,17 @@
       Span1
     .span3
       Span3
+
+-# layouts for mira
+.row.styleguide-row-layout
+  .span3
+    Span3
+  .span3
+    Span3
+  .span3
+    Span3
+  .span2
+    Span2
+  .span1
+    Span1
+
