fix profile nav issues
- no spacing between long name and image
- profile name and photo wrap to new line for long name

--- a/app/assets/stylesheets/application/_header.css.sass
+++ b/app/assets/stylesheets/application/_header.css.sass
@@ -100,14 +100,16 @@
     right: 0
     bottom: 10px
     background: $white
-    min-width: 170px
     cursor: pointer
     text-align: right
+    width: 100%
+
+    .text, img
+      display: inline-block
 
     .text
-      min-width: 122px
-      float: left
-      padding-top: 4px
+      padding: 0 2px 4px 0
+      vertical-align: bottom
 
     span
       +font-sans-tiny
@@ -116,15 +118,16 @@
       display: block
       font-size: 12px
       font-weight: 200
+      width: 250px
 
     span[data-attribute='profile-name']
       +font-sans-medium
       color: $grayDark
       font-weight: 400
-      padding-bottom: 5px
+      padding-bottom: 3px
+      line-height: 14px
 
     img
-      float: right
       width: 38px
       height: 38px
 
