--- a/app/assets/stylesheets/application/_header.css.sass
+++ b/app/assets/stylesheets/application/_header.css.sass
@@ -127,6 +127,10 @@
       padding-bottom: 3px
       line-height: 14px
 
+    span[data-attribute='profile-location']
+      height: 12px
+      padding-top: 2px
+
     img
       width: 38px
       height: 38px
