add basic google location autocomplete

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -137,6 +137,8 @@
     -# jQuery
     %script{src: "//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"}
 
+    %script{src: "http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"}
+
     -# Custom JS
     = javascript_include_tag "application"
     = render 'layouts/app_init'
