--- a/app/assets/stylesheets/application/user_profiles/show.css.sass
+++ b/app/assets/stylesheets/application/user_profiles/show.css.sass
@@ -96,6 +96,9 @@
   img
     width: 70px
 
+  .row:last-child
+    margin-top: 5px
+
 .edit-profile
   position: absolute
   right: 0
@@ -141,3 +144,14 @@ label.location
     left: 8px
     content: '\f041'
 
+.chef-types
+  margin-bottom: 15px
+
+  input
+    float: left
+    display: inline-block
+    width: 20px
+    margin: 0 10px
+
+  label:first-child
+    margin-bottom: 10px
