--- a/app/views/admin/quizzes/_form.html.haml
+++ b/app/views/admin/quizzes/_form.html.haml
@@ -1,6 +1,7 @@
 = semantic_form_for [:admin, @quiz] do |f|
   = f.inputs name: "Quiz Details" do
     = f.input :title
+    = f.input :activity
   = f.actions do
     = f.action :submit
     = f.action :cancel, wrapper_html: {class: :cancel}, label: 'Cancel'
