--- a/app/views/devise/registrations/create.json.erb
+++ b/app/views/devise/registrations/create.json.erb
@@ -1,2 +1,1 @@
-<% stored_path = last_stored_location_for(signed_in_resource) %>
-<%= {location: stored_path || thank_you_path}.to_json.html_safe %>
+<%= {location: user_profile_path(current_user)}.to_json.html_safe %>
