removed show_forum & auth flags

--- a/app/views/layouts/_global_navigation.html.haml
+++ b/app/views/layouts/_global_navigation.html.haml
@@ -9,7 +9,6 @@
 -#   %a{href: '', target: '_top'}
 -#     Shop
 -#     %i.icon-chevron-right.pull-right
-- if show_forum
   %li
     %a{href: 'http://forum.chefsteps.com', target: '_top'}
       Forum
@@ -19,5 +18,5 @@
     Blog
     %i.icon-chevron-right.pull-right
 
-- if show_auth
-  = render 'layouts/authentication'
+#authentication
+
