--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -15,5 +15,5 @@
             %a.delve-brand{href: 'http://delvekitchen.com', target: '_top'}
               = image_tag('delve-logo.png', alt: 'Delve')
         %ul.nav.pull-right
-          = render 'layouts/global_navigation', show_auth: show_auth, show_forum: show_forum
+          = render 'layouts/global_navigation'
 
