--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -125,9 +125,7 @@
     -# ==========================================================================
 
     #main-container
-      = render 'layouts/header',
-        show_auth: Rails.application.config.show_user_profiles,
-        show_forum: Rails.application.config.show_forum
+      = render 'layouts/header'
       = render 'layouts/title_bar'
       = yield
       = render 'layouts/footer'
