use margin to push down the inner list

--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -157,6 +157,9 @@
       &.authentication span
         display: none
 
+      &.authentication.first
+        margin-top: 86px
+
     i[class^="icon-"]
       display: inline-block
 
