--- a/app/views/devise/registrations/create.json.erb
+++ b/app/views/devise/registrations/create.json.erb
@@ -1,1 +1,2 @@
+<% stored_path = last_stored_location_for(signed_in_resource) %>
 <%= {location: user_profile_path(current_user) + "?edit=1&new_user=1"}.to_json.html_safe %>
