--- a/app/views/layouts/_app_init.html.haml
+++ b/app/views/layouts/_app_init.html.haml
@@ -1,7 +1,8 @@
 :javascript
   $(function() {
     new ChefSteps.init({
-      profile: JSON.parse('#{user_signed_in? ? j(current_user_presenter.present) : false}')
+      profile: JSON.parse('#{user_signed_in? ? j(current_user_presenter.present) : false}'),
+      registrationCompletionPath: "#{thank_you_path}"
     })
   });
 
