move encourage copy into profile intro section

--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -11,7 +11,7 @@
   .row
     .span4.pull-right.horizontal-divider
       = render partial: 'profile_bio', user: user
-    -# - if is_current_user?(user)
-    -#   .span8.pull-left.user-profile-intro
-    -#     = render partial: 'profile_intro', user: user
+    - if is_current_user?(user)
+      .span8.pull-left.user-profile-intro
+        = render partial: 'profile_intro', user: user
 
