use radio type for fixture. wasn't working always

--- a/spec/javascripts/fixtures/profile.html.haml
+++ b/spec/javascripts/fixtures/profile.html.haml
@@ -19,6 +19,6 @@
   %div
     %textarea{name: 'quote'} my quote
   %div
-    %input{name: 'chef_type', value: 'profesional'}
-    %input{name: 'chef_type', value: 'noob', checked: 'checked'}
+    %input{name: 'chef_type', type: 'radio', value: 'profesional'}
+    %input{name: 'chef_type', type: 'radio', value: 'noob', checked: 'checked'}
 
