Keep global nav css from stomping on forum css.

--- a/app/assets/javascripts/navigation_bootstrap.js.coffee.erb
+++ b/app/assets/javascripts/navigation_bootstrap.js.coffee.erb
@@ -13,7 +13,7 @@ class ChefSteps.NavigationBootstrap
       success: @loadHeader
 
   loadCSS: =>
-    jQuery(@cssLink).appendTo('head')
+    jQuery(@cssLink).prependTo('head')
 
   loadHeader: (response) =>
     jQuery(@headerTarget).html(response)
