Allow user to switch recipe units between metric and ounces

--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -42,6 +42,8 @@
         text-transform: uppercase
       th:first-child
         text-align: left
+      #units_header
+        text-transform: lowercase
     tbody
       .quantity
         text-align: right
