... cleaning up units switcher

--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -42,7 +42,7 @@
         text-transform: uppercase
       th:first-child
         text-align: left
-      #units_header
+      #units_header, #units_header span
         text-transform: lowercase
     tbody
       .quantity
