--- a/app/views/activities/_ingredients_list.html.haml
+++ b/app/views/activities/_ingredients_list.html.haml
@@ -21,5 +21,5 @@
           - else
             = ingredient.title
         %td.quantity= ingredient.display_quantity
-        %td= ingredient.unit
+        %td.unit = ingredient.unit
 
