--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -19,5 +19,6 @@
   = render 'overview', activity: activity
   #step-by-step
     = render 'step_by_step', activity: activity
+  = render 'cooked_this_button', activity: activity
 
   = render 'layouts/disqus_comments', disqus_id: disqus_id
