--- a/app/views/activities/_quizzes.html.haml
+++ b/app/views/activities/_quizzes.html.haml
@@ -3,4 +3,9 @@
     .container
       .row
         .span12
-          QUIZZES
+          %h3 Quizzes
+          Take your learning to the next step and complete the following #{'quiz'.pluralize activity.quizzes.count}:
+          %ul
+            - activity.quizzes.each do |quiz|
+              %li
+                = link_to quiz.title, '#'
