style add multiple choice questions

--- a/app/views/admin/quizzes/manage_questions.html.haml
+++ b/app/views/admin/quizzes/manage_questions.html.haml
@@ -7,5 +7,6 @@
 #quiz-controls
   = admin_button 'Add Multiple Choice Question', '#', id: 'add-multiple-choice-question'
 
-.quiz-questions
-  #question-list
+#quiz-questions
+  %ul#question-list
+
