rename show_quiz? helper to show_quizzes?

--- a/app/views/courses/_navigation.html.haml
+++ b/app/views/courses/_navigation.html.haml
@@ -28,7 +28,7 @@
           %li
             %a.icon-list-ol.icon-white{href: '#step-by-step'}
               %span.nav-label Step-By-Step
-          - if show_quiz? && model.has_quizzes?
+          - if show_quizzes? && model.has_quizzes?
             %li
               %a.icon-beaker.icon-white{href: '#quizzes'}
                 %span.nav-label Quiz
