--- a/app/views/activities/_quizzes.html.haml
+++ b/app/views/activities/_quizzes.html.haml
@@ -1,4 +1,4 @@
-- if show_quiz? and activity.has_quizzes?
+- if show_quizzes? and activity.has_quizzes?
   #quizzes
     .hero-well
       .container
