add quiz show view

--- a/app/views/activities/_quizzes.html.haml
+++ b/app/views/activities/_quizzes.html.haml
@@ -9,4 +9,4 @@
             %ul
               - activity.quizzes.each do |quiz|
                 %li
-                  = link_to quiz.title, '#'
+                  = link_to quiz.title, quiz_path(quiz)
