--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -40,10 +40,12 @@
         padding: 7px 0
         font-weight: 400
         text-transform: uppercase
-      th:first-child
+      #ingredient
         text-align: left
-      #units_header, #units_header span
-        text-transform: lowercase
+      #quantity
+        text-align: right
+        cursor: pointer
+
     tbody
       .quantity
         text-align: right
