use image with caption for quiz list

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -21,6 +21,7 @@
 @import application/courses/course_breakdown
 @import application/activities/overview
 @import application/activities/step_by_step
+@import application/activities/quizzes
 @import application/user_profiles/show
 
 @import application/users/forms
