--- a/app/assets/stylesheets/application/_thank_you.css.sass
+++ b/app/assets/stylesheets/application/_thank_you.css.sass
@@ -15,7 +15,7 @@
     color: $grayLight
     margin: 0
     padding: 0
-  a
+  a, .image-caption-text
     padding-top: 20px
     padding-bottom: 20px
     text-decoration: none
