--- a/app/views/activities/_quizzes.html.haml
+++ b/app/views/activities/_quizzes.html.haml
@@ -1,12 +1,16 @@
 - if show_quizzes? and activity.has_quizzes?
-  #quizzes
-    .hero-well
-      .container
+  #quizzes.hero-well
+    .container
+      .row
+        .span12
+          %h3 Quizzes
+          Take your learning to the next step and complete the following #{'quiz'.pluralize activity.quizzes.count}:
+      - activity.quizzes.each_slice(3) do |quizzes|
         .row
-          .span12
-            %h3 Quizzes
-            Take your learning to the next step and complete the following #{'quiz'.pluralize activity.quizzes.count}:
-            %ul
-              - activity.quizzes.each do |quiz|
-                %li
-                  = link_to quiz.title, quiz_path(quiz)
+          - quizzes.each do |quiz|
+            .span4
+              = link_to quiz_path(quiz) do
+                .image-with-caption
+                  = image_tag 'http://placehold.it/370x200/eee' #, class: 'img-polaroid'
+                  .image-caption
+                    .image-caption-text= quiz.title
