add cancel and update style

--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -28,17 +28,18 @@ ul#question-list
       padding: 5px
       width: 97%
       margin-top: 5px
+    h3
+      float: left
+      clear: both
 
   .actions
-    position: absolute
-    top: 5px
-    right: 5px
+    float: right
 
   .options
     list-style-type: none
     width: 100%
     float: left
 
-  .done
-    float: left
+  .form-actions
+    margin-top: 20px
 
