move image-with-caption style into separate file

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -13,6 +13,7 @@
 @import application/navigation
 @import application/carousel
 @import application/subscribe
+@import application/images
 @import application/home
 @import application/title_bar
 @import application/thank_you
