use trophy icon instead of beaker

--- a/app/views/courses/_navigation.html.haml
+++ b/app/views/courses/_navigation.html.haml
@@ -30,7 +30,7 @@
               %span.nav-label Step-By-Step
           - if show_quizzes? && model.has_quizzes?
             %li
-              %a.icon-beaker.icon-white{href: '#quizzes'}
+              %a.icon-trophy.icon-white{href: '#quizzes'}
                 %span.nav-label Quiz
           %li
             %a.icon-comment{href: '#disqus_thread', data: {'disqus-identifier' => disqus_id}}
