--- a/app/views/activities/_ingredients_list.html.haml
+++ b/app/views/activities/_ingredients_list.html.haml
@@ -1,10 +1,15 @@
 %script{:src => "/js/recipe_units.js"}
 %table.ingredients
+  %colgroup
+    %col{width: "80%"}
+    %col{width: "15%"}
+    %col{width: "5%"}
+
   %thead
     %tr
       %th#ingredient Ingredient
       %th#quantity{colspan: 2}
-        %a#change_units{alt: "Click to switch weight units"} Quantity
+        %a#change_units{title: "Click to change units"} Quantity
 
   %tbody
     - recipe.ingredients.each do |ingredient|
@@ -14,6 +19,6 @@
             = link_to ingredient.title, ingredient.product_url, { class: ('bullet-for-sale' if ingredient.for_sale) }
           - else
             = ingredient.title
-        %td.quantity= ingredient.display_quantity
-        %td.unit = ingredient.unit
+        %td.quantity.qtyfade= ingredient.display_quantity
+        %td.unit.qtyfade= ingredient.unit
 
