only trigger editQuestion during question creation

--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -21,7 +21,7 @@ ul#question-list
       float: left
       text-transform: uppercase
       color: $redLight
-    input[name=title]
+    input[name=question], input[name=instructions]
       float: left
       clear: both
       font-size: 14px
