Cleanups based on Alex review.

--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -48,7 +48,7 @@
         cursor: pointer
 
     tbody
-      .quantity, .quantity_lbs
+      .quantity
         text-align: right
       tr
         color: $black
