add huge serif font size

--- a/app/assets/stylesheets/styleguide.css.sass
+++ b/app/assets/stylesheets/styleguide.css.sass
@@ -32,6 +32,8 @@
   +font-serif-medium
 .styleguide-serif-large
   +font-serif-large
+.styleguide-serif-huge
+  +font-serif-huge
 
 .styleguide-color
   +font-serif-tiny
