--- a/app/views/styleguide/_fonts.html.haml
+++ b/app/views/styleguide/_fonts.html.haml
@@ -20,4 +20,6 @@
     Serif Medium (16px)
   .span2.styleguide-serif-large
     Serif Large (20px)
+  .span3.styleguide-serif-huge
+    Serif Huge (24px)
 
