rough layout for overview page

--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -227,6 +227,12 @@ iframe
     top: 5px
     content: ''
 
+.btn-x-large
+  padding: 22px 28px
+  font-size: 18px
+  line-height: normal
+  +border-radius(7px)
+
 .vertical-divider
   margin: 0 5px
 
