--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -23,6 +23,7 @@
 @import application/activities/overview
 @import application/activities/step_by_step
 @import application/activities/quizzes
+@import application/quizzes/overview
 @import application/user_profiles/show
 
 @import application/users/forms
