--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -21,6 +21,10 @@ ul#question-list
       float: left
       text-transform: uppercase
       color: $redLight
+    label
+      float: left
+      clear: both
+      font-weight: bold
     input[name=question], input[name=instructions]
       float: left
       clear: both
