add uppercase button style

--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -233,6 +233,10 @@ iframe
   line-height: normal
   +border-radius(7px)
 
+.btn-uppercase
+  @extend .btn
+  text-transform: uppercase
+
 .vertical-divider
   margin: 0 5px
 
