--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -23,5 +23,5 @@
         %p
           Lorem ipsum Quiz Start Text
       .span2.pull-right
-        .btn.btn-primary.btn-x-large Start Quiz
+        .btn-uppercase.btn-primary.btn-x-large Start Quiz
 
