--- a/app/assets/stylesheets/application/quizzes/_overview.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_overview.css.sass
@@ -4,9 +4,10 @@
 #quiz-overview
   p
     +font-serif-huge
+    margin-top: 0
 
   .hero-unit
     background: whiteSmoke
-    margin-left: 0
+    margin: 20px 0 30px 0
     [class*="span"]
       margin-left: 0
