use food image placeholder

--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -13,7 +13,7 @@
           %strong #{quiz.title}!
     .row.hero-unit
       .span8
-        = image_tag 'http://placehold.it/745x376/eee', class: 'img-polaroid'
+        = image_tag 'http://lorempixel.com/745/376/food/', class: 'img-polaroid'
       .span4
         %input{value: '20 questions'}
         %input{value: '15 minutes'}
